--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - ./mysql_data:/var/lib/mysql
   jenkins:
     image: jenkins/jenkins:lts
+    user: root
     ports:
       - "8080:8080"
     volumes:
