--- a/docker-compose_jenkins.yml
+++ b/docker-compose_jenkins.yml
@@ -4,7 +4,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - DOCKER_REGISTRY_URL=https://index.docker.io/v1/
     ports:
       - "8081:8081"
     platform: linux/amd64
+
 
