--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=AppV2
 server.port=8081
+spring.datasource.url=jdbc:mysql://db:3306/webdb
+spring.datasource.username=jay
+spring.datasource.password=123456
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
+logging.level.org.springframework.web=DEBUG
